Stat warn api, stat fixes
